fix: better slider centering on tablet

--- a/shelter/src/scss/components/slider.scss
+++ b/shelter/src/scss/components/slider.scss
@@ -106,6 +106,7 @@
 
         &__wrapper {
             padding: 0 12px;
+            max-width: 630px;
         }
 
         &__item {
